Moved natives to /minecraft/natives